--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "history": "^4.7.2",
     "isomorphic-style-loader": "^4.0.0",
     "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.5",
     "node-fetch": "^1.7.3",
     "normalize.css": "^7.0.0",
     "passport": "^0.4.0",
@@ -30,6 +31,7 @@
     "query-string": "^5.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "recompose": "^0.26.0",
     "sequelize": "^4.28.6",
     "serialize-javascript": "^1.3.0",
     "source-map-support": "^0.5.0",
