--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "query-string": "^5.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "recharts": "^1.0.0-beta.10",
     "recompose": "^0.26.0",
     "sequelize": "^4.28.6",
     "serialize-javascript": "^1.3.0",
